# VisionPipeline-gaze

./: README.md  pyproject.toml
gaze/: __init__.py
gaze/cli/: __main__.py  estimate_gaze.py
gaze/core/: __init__.py  io.py  normalize.py  pipeline.py  result.py  schema.py
gaze/estimators/: __init__.py  base.py  l2cs.py  registry.py
gaze/viz/: draw.py
