[project]
name = "gaze-lib"
version = "0.1.0"
description = "Gaze augmentation stage: attach gaze (yaw/pitch + gaze_vec) using face boxes in upstream JSON."
readme = "README.md"

authors = [
    { name = "Surya Chand Rayala", email = "suryachand2k1@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "l2cs",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gaze"]

[tool.uv.sources]
l2cs = { git = "https://github.com/edavalosanaya/L2CS-Net.git", rev = "main" }
